--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -2975,3 +2975,12 @@ div.header h3{
 .modal-body {
     font-size: 20px;
 }
+
+.likeButton:hover {
+    border: 1px solid #ff0000;
+    background-color: #ffeeee;
+}
+
+.copyButton:hover {
+    opacity: 1;
+}
