--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -2976,11 +2976,36 @@ div.header h3{
     font-size: 20px;
 }
 
-.likeButton:hover {
-    border: 1px solid #ff0000;
-    background-color: #ffeeee;
+.likeButton {
+    margin-top: 13px;
+    opacity: 0.7;
 }
 
-.copyButton:hover {
+.likeButton:hover {
     opacity: 1;
+}
+
+.copyButton {
+    padding-left: 10px;
+    margin-top: 13px;
+    padding-right: 10px;
+}
+
+.copyButton img {
+    opacity: 0.5;
+}
+
+.copyButton img:hover {
+    opacity: 1;
+}
+
+.itemText {
+    white-space: pre-line;
+    margin-top:11px;
+    margin-bottom: 15px;
+    color: #444e67;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1.1;
 }
